dev/manifests/3rd-party/postgres/primary/svc-headless.yaml
---
# Source: postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-postgresql-hl
  namespace: "hornet"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.5.8
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
    pia-team.com/app: postgres
    pia-team.com/app-logo: postgres
    pia-team.com/app-title: Postgres
    # Use this annotation in addition to the actual publishNotReadyAddresses
    # field below because the annotation will stop being respected soon but the
    # field is broken in some versions of Kubernetes:
    # https://github.com/kubernetes/kubernetes/issues/58662
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
    pia-team.com/role: pia.k8s.postgres/0.5.1
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
  - name: tcp-postgresql
    port: 5432
    targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/component: primary
