dev/manifests/3rd-party/postgres/primary/svc.yaml
---
# Source: postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-postgresql
  namespace: "hornet"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.5.8
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
    pia-team.com/app: postgres
    pia-team.com/app-logo: postgres
    pia-team.com/app-title: Postgres
    pia-team.com/role: pia.k8s.postgres/0.5.1
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: tcp-postgresql
    port: 5432
    targetPort: tcp-postgresql
    nodePort:
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/component: primary
