dev/manifests/3rd-party/postgres/primary/networkpolicy.yaml
---
# Source: postgresql/templates/primary/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-postgresql-ingress
  namespace: "hornet"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.5.8
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
    pia-team.com/app: postgres
    pia-team.com/app-logo: postgres
    pia-team.com/app-title: Postgres
    pia-team.com/role: pia.k8s.postgres/0.5.1
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: postgres
      app.kubernetes.io/component: primary
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: hornet
    ports:
    - port: 5432
